--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="col-sm-6 py-2"><h6>Total Projects: <span class="text-secondary">6</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+91 97983 80499</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">anupam9546@gmail.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Shiv Shakti colony,Chas,Bokaro,Jharkhand,India(827013)</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Shiv Shakti colony Bokaro,Jharkhand,India(827013)</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
                     <a href="" class="btn blue btn-outline-primary mr-4">Hire Me</a>
