--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FreeFolio - Freelancer Portfolio Template</title>
+    <title>Anupam Mathur</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -124,21 +124,21 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Bachelor of Science</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2005 - 2009</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Bachelor of Technology</h5>
+                            <p class="mb-2"><strong>Vel Tech University</strong> | <small>2019 - 2023</small></p>
+                            <p>Performace Till now : 9.15/10 CGPA</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2009 - 2011</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">12th (Intermediate)</h5>
+                            <p class="mb-2"><strong>The Pentecostal Assembly School</strong> | <small>2018 - 2019</small></p>
+                            <p>Performace Till now : 87.4 %</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">IIT Kharagpur</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2011 - 2015</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">10th (Matriculation)</h5>
+                            <p class="mb-2"><strong>Crescent Public School</strong> | <small>2017 - 2018</small></p>
+                            <p>Performace Till now : 9.6/10 CGPA</p>
                         </div>
                     </div>
                 </div>
@@ -147,21 +147,22 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
+                            <p class="mb-2"><strong>2 Personal Projects</strong> | <small> Good</small></p>
+                            <p>Ai based model for development and innovation of new vehicle | <small>Numpy,Pandas,Random Forest,Logistic Regression,keras-R-CNN, sklearn - Naive Bayes</small>  </p>
+                            <p>POC- Face Detection with Dlib using HOG and Linear SVM | <small>Pandas, Dlib’s HOG and Linear SVM ,OpenCV </small></p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                            <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Good</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Data Analysis</h5>
+                            <p class="mb-2"><strong>1 Personal Project</strong> | <small> Excellent</small></p>
+                            <p>POC- Stock Price Prediction Using LSTM | <small>Pandas ,numpy,keras-LSTM,sklearn,plotly</small></p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Development</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                            <p class="mb-2"><strong>Portfolio website</strong> | <small> Excellent</small></p>
+                            <p>HTML, CSS , JS , PHP , Git</p>
                         </div>
                     </div>
                 </div>
@@ -184,7 +185,7 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">HTML</h6>
+                            <h6 class="font-weight-bold">Python</h6>
                             <h6 class="font-weight-bold">95%</h6>
                         </div>
                         <div class="progress">
@@ -193,16 +194,16 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">CSS</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">Machine Learning</h6>
+                            <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">PHP</h6>
+                            <h6 class="font-weight-bold">Data Analysis</h6>
                             <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
@@ -213,7 +214,7 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Javascript</h6>
+                            <h6 class="font-weight-bold">Data Visualization</h6>
                             <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
@@ -222,16 +223,16 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Angular JS</h6>
-                            <h6 class="font-weight-bold">95%</h6>
+                            <h6 class="font-weight-bold">Feature Engineering</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Wordpress</h6>
+                            <h6 class="font-weight-bold">Deployment</h6>
                             <h6 class="font-weight-bold">85%</h6>
                         </div>
                         <div class="progress">
@@ -315,15 +316,15 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
+                <h1 class="position-absolute text-uppercase text-primary">My Certifications</h1>
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Marketing</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Machine learning</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Artificial Intelligence</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Data Science</li>
                     </ul>
                 </div>
             </div>
@@ -399,7 +400,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Review</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Clients Say</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Recommendations</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-9">
