--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Shiv Shakti colony Bokaro,Jharkhand,India(827013)</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <a href="" class="btn blue btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                    <a href="https://www.linkedin.com/in/anupam-mathur-5a6a59152/" class="btn blue btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://www.linkedin.com/in/anupam-mathur-5a6a59152/" class="btn btn-outline-primary">Learn More</a>
                 </div>
             </div>
         </div>
