--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="" box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);>
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Aspiring Data Analyst</h3>
