--- a/index.html
+++ b/index.html
@@ -88,11 +88,17 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="" box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);>
+                    <img class="img-fluid w-100 shadow-custom" src="img/about-custom.jpg">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Aspiring Data Analyst</h3>
-                    <p></p>
+                    <h3 class="mb-4">Tech Agnostic</h3>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <!-- <p></p> -->
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Anupam Mathur</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">16 February 2002</span></h6></div>
