--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@ crawlers and Lambda.
                       Within the pair, I focused mainly on the CSS and keyframe animations controlled with state variables.
                     </li>
                     <li class="project_link">
-                      <a href="https://masa-pokedex.netlify.app/">
+                      <a href="https://">
                         Project Link  
                       </a>
                         &#124; 
-                      <a href="https://github.com/masarabbit/sei_project_2/blob/main/README.md">
+                      <a href="https://github.com/">
                         Read Me
                       </a>
                     </li>
