--- a/index.html
+++ b/index.html
@@ -216,20 +216,16 @@ crawlers and Lambda.
                 <div class="detail anim">
                   <ul>
                     <li>
-                      Brief: to create a website connected to an external API using React in 48 hours, in pairs.
+                      This project is on sentiment analysis using BERT and it focuses on analyzing customer reviews using AI and NLP.
                     </li>
                     <li>
-                      We created a website to display details of 151 Pokémon from the PokéAPI, with filtering and sorting functionality.
+                      I used the Amazon review dataset, which includes reviews of hundreds of thousands of products from customers around the world. 
                     </li>
                     <li>
-                      Within the pair, I focused mainly on the CSS and keyframe animations controlled with state variables.
+                      The goal of the project is to use BERT, a language model based on transformer architecture, to analyze Amazon reviews and determine an overall sentiment score for each review. 
                     </li>
                     <li class="project_link">
-                      <a href="https://">
-                        Project Link  
-                      </a>
-                        &#124; 
-                      <a href="https://github.com/">
+                      <a href="https://github.com/anupam9546/E-com-Sentiments">
                         Read Me
                       </a>
                     </li>
