removed_design_skills

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
               <div class="skills hundred_fifty anim">
               </div>
 
-              <div class="spacer_extra"></div>
+              <div class="sub_heading anim">
+              </div>
               <div class="skills anim">
               </div>
-
-              <div class="spacer_extra"></div>
 
               <div class="skill_container">
                 <div>
