--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 Interest
               </div>
               <div class="bio anim">
-                I like singing and learning new tech trends and to keep me up-to-date . I even love playing mobile games like CODM (Rank 8 in Asia Sub-Div: Team Made In) and Apex Legend. 
+                I like singing and learning new tech trends and to keep me up-to-date . I even love playing mobile games like CODM (Rank 8 in Asia Sub-Div: Team Made In India(GodLike)) and Apex Legend. 
               </div>
             </div>   
           </section>
@@ -255,7 +255,7 @@ crawlers and Lambda.
 providing an interactive UI for admin and user using Servlet and JSP.
                   </li>
                   <li>
-                    Learned Java,SQL and Web development during the internshipStarted as a Junior Buyer, progressed on to lead a team of buyer and logistics.
+                    Learned Java,SQL and Web development during the internship.
                   </li>
                 </ul>
               </div>
