--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ crawlers and Lambda.
               </div>
               <div class="experience_wrapper anim">
                 <p>
-                  Ongoing Intern at Cisco. 
+                  Ongoing Internship at Cisco. 
                   <span>
                      :  Jan 2023 - Present
                   </span>
