--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
               </div>
 
               <div class="bio anim">
-                I'm Anupam Mathur (pen name Rayver). I'm a final year CSE student at Vel Tech University.
+                I'm Anupam Mathur (pen name Rayver). I'm a Software Engineer at Cisco , I completed my Btech in CSE from Vel Tech University.
               <div class="bio anim">
-                Since my matriculation I liked command line I installed termux and use to hack wifi , this initiated my interest in Computer Science which was later on came to track when I leaned Java during my intermediated .During my college time I use to make random payloads and Phishing links for fun . But then i got to know that at the end i like playig with data and moved to Data Science.  
+                Since my matriculation I liked command line I installed termux and use to hack wifi , this initiated my interest in Computer Science which was later on came to track when I leaned Java during my intermediated .During my college time I use to make random payloads and Phishing links for fun . But then i got to know that at the end i like playing with data and moved to Data Science.  
               </div>
               <div class="bio anim">
                 Experimenting with DataSets, Visualizing it generating insights, my interest in coding and Data Science gradually grew, until I eventually decided to take my leap of faith, started self learning SQL and distributive computing from Youtube. During the course, I became acquainted with Python, SQL ,AWS and a bit of Machine learnig and really enjoyed the continual learning that comes with that.
