--- a/index.html
+++ b/index.html
@@ -240,11 +240,30 @@ crawlers and Lambda.
               <div class="heading anim">
                 Experience
               </div>
+
               <div class="experience_wrapper anim">
                 <p>
-                  Ongoing Internship at Cisco. 
+                  Software Engineer at Cisco 
                   <span>
-                     :  Jan 2023 - Present
+                     :  Apr 2022 - May 2022
+                  </span>
+                </p>
+
+                <ul class="experience_list">
+                  <li>
+                    Started my Corporate life with one of the best company to start with. 
+                  </li>
+                  <li>
+                    Updates comming soon
+                  </li>
+                </ul>
+              </div>
+              
+              <div class="experience_wrapper anim">
+                <p>
+                  Intern at Cisco. 
+                  <span>
+                     :  Jan 2023 - June 2023
                   </span>
                 </p>
 
@@ -253,7 +272,7 @@ crawlers and Lambda.
                    Working on Springboot , RestApi , Mulesoft , Kibana, Elastic Search etc
                   </li>
                   <li>
-                    Will be giving more details soon :-)
+                    Learned a lot about core Java development. 
                   </li>
                 </ul>
               </div>
