--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ crawlers and Lambda.
                 <p>
                   Software Engineer at Cisco 
                   <span>
-                     :  Apr 2022 - May 2022
+                     :  Aug 2023 - Present
                   </span>
                 </p>
 
